css/portfolio.css
/* Ensure padding and border are included in element's width and height */
*,
*::before,
*::after {
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
    overflow-x: hidden; /* Hide horizontal overflow */
}

body {
    margin: 0;
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
    overflow-x: hidden; /* Hide horizontal overflow */
}

ul {
    display: flex;
    flex-wrap: nowrap;
    margin: 0;
    background-color: rgb(18, 22, 33);
    list-style: none;
}

/* Dropdown menu styles */
#myNav {
    position: fixed;
    top: 0;
    width: 100%;
    background-color: rgb(18, 22, 33); /* Ensure background color */
    z-index: 1000; /* High z-index to stay on top of other content */
}

#myNav ul {
    display: flex;
    list-style-type: none;
    margin: 0;
    padding: 0;
}

#myNav li {
    position: relative;
}

#myNav a {
    font-weight: 700;
    font-family: 'Montserrat', sans-serif;
    color: rgb(93, 205, 168);
    font-size: 16px;
    text-decoration: none;
    padding: 15px; /* Add padding here */
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.143);
    display: block;
}

#myNav li:hover {
    background-color: rgba(93, 205, 168, 0.231);
}

#myNav li:hover > a {
    color: rgb(109, 237, 194);
}

/* Dropdown content */
.dropdown-content {
    display: none;
    position: absolute;
    top: 100%;
    left: 0; /* Align with the parent .dropdown */
    background-color: rgb(18, 22, 33);
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1001;
    flex-direction: column;
    opacity: 0;
    transition: opacity 1s ease-in-out; /* Add transition for fade in/out */
}

.dropdown-content li {
    padding: 0; /* Remove default padding */
}

.dropdown-content a {
    color: white;
    padding: 12px 16px; /* Padding for the link */
    text-decoration: none;
    display: block;
    text-align: left;
}

.dropdown-content a:hover {
    background-color: rgba(93, 205, 168, 0.231);
    color: rgb(109, 237, 194); /* Ensure text color change on hover */
}

/* Show dropdown on hover with a fade effect */
.dropdown:hover .dropdown-content {
    display: flex;
    opacity: 1; /* Ensure the dropdown is displayed and opacity is set to 1 */
}

@keyframes fadeIn {
    from { opacity: 0; }
    to { opacity: 1; }
}

#side-nav {
    color: white; /* placeholder */ 
    position: fixed;
    top: 45%;
    left: 20px;
}

#init-sugar {
    margin: auto;
    display: flex;
    justify-content: center;
}

#init-sugar > p {
    transition: color 0.5s ease;
}

#init-sugar > p:hover {
    color: aquamarine;
}

.width-fix {
    max-width: 70rem;
    margin-right: auto;
    margin-left: auto;
}

.col-con {
    width: 100%;
    min-height: 100vh;
    display: flex;
    text-align: center;
    margin: auto;
    justify-content: center;
    overflow-x: hidden; /* Prevent horizontal overflow */
}


.two-columns {
    display: flex;
    justify-content: space-between;
    gap: 30px;
    flex-wrap: wrap; /* Allow wrapping on smaller screens */
}

.column {
    width: 100%; /* Full width on smaller screens */
    margin: auto;
    padding: 0px 15px; /* Adjusted for smaller screens */
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

/* Stack columns on top of each other on smaller screens */
@media (max-width: 768px) {
    .two-columns {
        flex-direction: column;
        gap: 30px;
    }

    .column {
        width: 100%;
    }

    .rotate-fx {
        max-width: 100%;
    }

    .section-img {
        max-width: 100%;
    }
}

/* Keep columns side by side on larger screens */
@media (min-width: 769px) {
    .two-columns {
        flex-direction: row;
    }
    
    .column {
        flex: 1 1 50%; /* Allow columns to grow and shrink */
        max-width: calc(50% - 30px); /* Ensure columns don't shrink too much */
        margin: 0; /* Remove margins to prevent overflow */
    }


}

/* Adjust text containers to prevent cut-off */
.about-content, .projects-text {
    padding: 0 10px;
    width: 100%;
    box-sizing: border-box;
}

/* New content-wrapper class */
.content-wrapper {
    margin: 0 auto; /* Center the text containers */
    max-width: 100%; /* Ensure the containers don't get too wide */
    width: 100%; /* Set to 100% for better alignment */
    box-sizing: border-box;
    padding: 0 10px; /* Add some padding */
}

/* Responsive styles */
/* You can set it to display in larger screens if needed */
@media (min-width: 1301px) {
    .project-title .section-title.extra-clamp.pt-space {
        display: block;
    }
}

@media (max-width: 1300px) {
    .content-wrapper {
        max-width: 90%;
    }
    .project-title .section-title.extra-clamp.pt-space {
        display: none;
    }
}

@media (max-width: 1170px) {
    .content-wrapper {
        max-width: 85%;
    }
    #about-sect-title {
        padding-top: 0px;
    }
    .project-title .section-title.extra-clamp.pt-space {
        display: none;
    }
}

@media (max-width: 768px) {
    .content-wrapper {
        max-width: 70%;
        padding: 0 5px;
    }
    #about-sect-title {
        padding-top: 30px;
    }
    .section-title {
        text-wrap: wrap;
    }
    .project-title {
        margin-top: 20px; /* fix for adding margin above title when in mobile layout */
    }
    .project-title .section-title.extra-clamp.pt-space {
        display: none;
    }
    .minwidth-add-margin-bot{ /* fix for adding margin under image when in mobile layout */
        margin-bottom: 20px;
    }
}

.section-title {
    font-size: clamp(70px, 4vw, 32px); /* Adjust min and max sizes as needed */
    font-weight: 900;
    text-transform: uppercase;
    margin: 0 auto;
    white-space: nowrap;
    overflow: hidden;
}

.section-title.extra-clamp {
    margin: 0;
    font-size: clamp(62px, 4vw, 32px); /* These titles need to shrink slightly more */
}

.project-title { /* Adjust the project title size differently in case the titles are long */
    justify-content: center;
    display: flex;
    flex-wrap: wrap;
}

/* Ensure the section-img image shrinks properly */
.section-img img {
    width: 100%; /* Initial width */
    max-width: 512px; /* Maximum width */
    height: auto;
}

#welcome {
    background-color: blueviolet;
    text-align: center;
    width: 100%;
}

#welcome p {
    font-size: clamp(60px, 10vw, 120px);
    font-weight: 700;
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
    color: white;
    text-transform: uppercase;
    text-align: center;
    margin: auto;
}

#about {
    background-color: rgb(18, 22, 33);
    color: white;
    width: 100%;
}

.about-content {
    text-align: center;
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
    padding-top: 5px;
    padding-bottom: 5px;
}

.about-content a {
    text-decoration: underline;
    color: white;
}

.about-content p {
    color: white;
}

.pill {
    background-color: rgba(148, 45, 245, 0.303);
    border-radius: 25px;
    width: min-content;
    margin: 0;
    flex-shrink: 1; /* Allow pills to shrink */
}

.pill > p {
    color: rgb(193, 128, 255);
    padding: 3px 10px;
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
    font-weight: 600;
    margin: 0;
}

.pill-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    box-sizing: border-box; /* Include padding in the total width */
    padding: 10px 20px; /* Add padding inside the container */
}

.pill-row {
    display: flex;
    justify-content: center;
    max-width: 100%;
    flex-wrap: wrap; /* Allow pills to wrap in the row */
    box-sizing: border-box; /* Include padding in the total width */
    padding: 0 10px; /* Adjust padding as needed */
    gap: 10px; /* Adjust the gap between pills */
}

.rotate-fx-con {
    display: flex;
    justify-content: center;
    align-items: center;
}

.rotate-fx {
    perspective: 100px;
    transform-style: preserve-3d;
}

#projects {
    background-color: aquamarine;
    position: relative;
    width: 100%;
}

.projects-text {
    color: rgb(18, 22, 33);
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
    font-weight: 300;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding: 0 10px; /* Added */
    width: 100%; /* Added */
    box-sizing: border-box; /* Added */
}

.project-container {
    display: flex;
    width: 100%;
    overflow: hidden;
    position: relative;
    flex-direction: column; /* Added */
}

.project-slide {
    width: 100%;
    display: flex;
    transition: transform 0.5s ease-in-out;
}

.project-slide:not(.active) {
    display: none;
}

.arrow {
    position: absolute;
    border-radius: 5%;
    top: 50%;
    transform: translateY(-50%);
    font-size: 2rem;
    background-color: blueviolet;
    padding: 30px 12px 30px 12px;
    color: white;
    cursor: pointer;
    z-index: 10;
}

.arrow:hover {
    background-color: rgb(153, 65, 235);
}

.left-arrow {
    left: 10px;
}

.right-arrow {
    right: 10px;
}

#contact {
    background-color: rgb(18, 22, 33);
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
    text-align: center;
    color: white;
    width: 100%;
    min-height: 100vh;
    font-weight: 600;
}

.form-card {
    display: flex;
    justify-content: center;
    text-align: left;
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
    margin: auto;
    padding: 0px;
    border-radius: 15px;
    min-width: 330px;
}

.form-card form {
    width: 100%;
}

.form-card textarea {
    height: 90px;
}

.form-card input, textarea {
    margin: 8px 0px;
    color: white;
    padding: 12px 20px;
    background-color: rgba(0, 0, 0, 0.11);
    border: 1px solid rgba(127, 255, 212, 0.213);
    border-radius: 5px;
    width: 100%;
}

.form-card button {
    border: none;
    background-color: blueviolet;
    color: white;
    padding-left: 5px;
    padding-right: 5px;
    border-radius: 5px;
    font-weight: 600;
    font-size: 17px;
    max-width: min-content;
    height: 35px;
}

.form-card button:hover {
    background-color: rgb(153, 65, 235);
}

.gh-btn {
    margin: 0px auto;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 15px;
    background-color: blueviolet;
    border-radius: 10px;
    width: min-content;
    white-space: nowrap;
}

.gh-btn:hover {
    background-color: rgb(153, 65, 235);
}

.gh-btn img {
    width: 20px;
    height: auto;
}

.gh-btn a {
    margin-left: 5px;
    margin-top: 0;
    margin-bottom: 0;
    margin-right: 0;
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
    font-weight: 700;
    color: white;
    text-decoration: none;
}

@media (max-width: 768px) {
    .gh-btn {
        margin-bottom: 20px;
    }
}

#my-footer {
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
    font-weight: bold;
    background-color: aquamarine;
    text-align: center;
    text-decoration: none;
    height: 50px;
    margin: 0;
    width: 100%;
}

#my-footer > p {
    margin: auto;
    padding-top: 15px;
    color: rgb(18, 22, 33);
}

.swell {
    transition: transform 0.2s;
    max-width: 512px;
    max-height: 512px;
    width: auto;
    height: auto;
}

.swell:hover {
    transform: scale(1.05);
}

.linkedin {
    display: flex;
    align-items: center;
    justify-content: center;
}

.linkedin img {
    transform: scale(0.8);
}

.linkedin a {
    color: white;
    text-decoration: none;
    text-align: center;
}

